executed black box approach